apps/base/golinks/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: golinks
  labels:
    http-ingress: "true"
